[tool.poetry]
name = "loan-approval-system-with-bias-mitigation"
version = "0.1.0"
description = ""
authors = ["Harold Geumtcheng <geumtchengh@gmail.com>"]
readme = "README.md"
packages = [{include = "loan_approval_system_with_bias_mitigation"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.26.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
aif360 = "^0.6.1"
tensorflow = "^2.18.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"